Bug 362625 - Syntax error on sending mails to participants added to an appointment
Summary: Syntax error on sending mails to participants added to an appointment
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: invitations (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-03 14:02 UTC by Armin Leghissa
Modified: 2017-07-07 11:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Armin Leghissa 2016-05-03 14:02:37 UTC
Description:
When i create an appointment in a shared calendar and add participants by simply
begin typing till i get a popup with a list of matching email contacts, select one,
and finally click at "save" button, then i get "syntax-error"  messages as notification message.
Details in "Actual Results".

Reproducible: Always

Steps to Reproduce:
1. Create an appointment.
2. Go to the participants tab and choose at least one.
3. Klick the save button.
4. A few seconds later the error message described above appears as notification message.

Actual Results:  
I get notification messages like the following example instead of getting an email sent:

Error ending a message. Message sending failed since the following recipients were rejected by the server:
"c.rauecker@vcnc.org" (The server responded: "5.5.2 Syntax error. r5sm3985840wjy.37 - gsmtp")
Jenning Sch?fer (The server responded: "5.5.2 Syntax error. r5sm3985840wjy.37 - gsmtp")

Expected Results:  
Email for each participant should be sent, an invitation, i think.

I experimented a little bit and found out 2 things:

1. per default, selecting a contact appearing in the popup/dropdown as described above,
    leads to a contact inserted in the textfield of the form: Buddy-Name <abuddy@myorg.com>
    or thelike. changing that string simply to the format: abuddy@myorg.com manually,
    then the invitation maill will be sent as expected.

2. the error appears no matter using a google-calender backend or a caldav backend.

Hope that helps you. Specially point 1 seems interesting.
Comment 1 Armin Leghissa 2016-05-03 14:11:39 UTC
Sorry, forgot the versions in usage:
Newest Manjaro Linux, kernel-4.5, x86_64 (Arch-Linux-based)

KOrganizer-5.2.0
kde-frameworks-5.21.0
Qt-5.6.0
xcb windowsystem
Comment 2 Laurent Montel 2017-07-07 11:56:52 UTC
Git commit 2fbc490b1c84e72633a2de82233fb89064a118f5 by Montel Laurent.
Committed on 07/07/2017 at 11:30.
Pushed by mlaurent into branch 'master'.

Fix Bug 362625 - Syntax error on sending mails to participants added to an appointment

FIXED-IN: 5.6.0
Related: bug 352228

M  +4    -4    src/individualmailcomponentfactory.cpp
M  +1    -1    src/individualmailcomponentfactory.h

https://commits.kde.org/incidenceeditor/2fbc490b1c84e72633a2de82233fb89064a118f5