Fix Bug 362625 - Syntax error on sending mails to participants added to an appointment

FIXED-IN: 5.6.0
BUG: 362625
BUG: 352228