src/individualmailcomponentfactory.cpp
@@ -63,7 +63,7 @@ void IndividualMessageQueueJob::start()
     }
     if (!attendeesAutoTo.isEmpty() || !attendeesAutoCc.isEmpty()
         || !addressAttribute().bcc().isEmpty()) {
-        startQueueJob(attendeesAutoTo, attendeesAutoCc);
+        startQueueJob(attendeesAutoTo, addressAttribute().to(), attendeesAutoCc, addressAttribute().cc());
     }
 
     QStringList attendeesComposerTo, attendeesComposerCc;
@@ -85,11 +85,11 @@ void IndividualMessageQueueJob::start()
     }
 }
 
-void IndividualMessageQueueJob::startQueueJob(const QStringList &to, const QStringList &cc)
+void IndividualMessageQueueJob::startQueueJob(const QStringList &messageTo, const QStringList &to, const QStringList &messageCc, const QStringList &cc)
 {
     KMime::Message::Ptr msg(message());
-    msg->to()->fromUnicodeString(to.join(QStringLiteral(", ")), "utf-8");
-    msg->cc()->fromUnicodeString(cc.join(QStringLiteral(", ")), "utf-8");
+    msg->to()->fromUnicodeString(messageTo.join(QStringLiteral(", ")), "utf-8");
+    msg->cc()->fromUnicodeString(messageCc.join(QStringLiteral(", ")), "utf-8");
     msg->assemble();
 
     mQueueJob = new MailTransport::MessageQueueJob(this);
